fix: update search bar key color to address contrast issues (#2217)

--- a/src/scss/theme/_doc-search.scss
+++ b/src/scss/theme/_doc-search.scss
@@ -1,7 +1,7 @@
 [data-theme='light'] .DocSearch {
   /* --docsearch-primary-color: var(--ifm-color-primary); */
   /* --docsearch-text-color: var(--ifm-font-color-base); */
-  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
+  --docsearch-muted-color: var(--general-gray-dark);
   --docsearch-container-background: rgba(10, 10, 10, 0.9);
   /* Modal */
   --docsearch-modal-background: var(--ifm-color-secondary-lighter);
